ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/PolyGlot/llvm/set-3/file_polyglot_003203.c.log
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-3$ (ulimit -St 45 -Sf 90000; clang-12 -w -O2 -pedantic file_polyglot_003203.c)
file_polyglot_003203.c:2:61: error: called object type 'int' is not a function or function pointer
 A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
                                                         ~~ ^
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name file_polyglot_003203.c -mrelocation-model static -mframe-pointer=none -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O2 -pedantic -w -fdebug-compilation-dir /home/user42/git/directed-compiler-fuzzing-code/scripts/set-3 -ferror-limit 19 -fgnuc-version=4.2.1 -fcolor-diagnostics -vectorize-loops -vectorize-slp -faddrsig -o /tmp/file_polyglot_003203-d32281.o -x c file_polyglot_003203.c
1.	file_polyglot_003203.c:2:73: current parser token ','
#0 0x00007f84bf466001 llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a001)
#1 0x00007f84bf464140 llvm::sys::RunSignalHandlers() (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd18140)
#2 0x00007f84bf466712 (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a712)
#3 0x00007f84c707c980 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x12980)
#4 0x00007f84c4ce6d07 clang::ASTContext::getAsArrayType(clang::QualType) const (/usr/lib/x86_64-linux-gnu/libclang-cpp.so.12+0xa1dd07)
#5 0x0000000001f37d20 
clang: error: unable to execute command: Segmentation fault
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/file_polyglot_003203-e9dcbd.c
clang: note: diagnostic msg: /tmp/file_polyglot_003203-e9dcbd.sh
clang: note: diagnostic msg: 

********************
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-3$ more file_polyglot_003203.c
enum X {
 A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
 ;
 static const struct x {
 int x [ sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? x ( ) ^= x ( ) : 1 ] ;
 }
 test = 0 ;
 static void y ( int ) ;
 int main ( ) {
 switch ( test ) {
 struct x {
 int x ;
 }
 ;
 }
 return 0 ;
 }
 static void y ( int x ) {
 x ( ) , y , x ( ) = x ( ) , test = test , x += x , x = x ;
 }
 
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-3$ gcc file_polyglot_003203.c
file_polyglot_003203.c:2:58: error: called object is not a function or function pointer
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                          ^~
file_polyglot_003203.c:2:87: error: redeclaration of enumerator 'D'
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                       ^
file_polyglot_003203.c:2:75: note: previous definition of 'D' was here
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                           ^
file_polyglot_003203.c:2:91: error: redeclaration of enumerator 'C'
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                           ^
file_polyglot_003203.c:2:71: note: previous definition of 'C' was here
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                       ^
file_polyglot_003203.c:2:95: error: redeclaration of enumerator 'D'
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                               ^
file_polyglot_003203.c:2:87: note: previous definition of 'D' was here
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                       ^
file_polyglot_003203.c:2:99: error: redeclaration of enumerator 'E'
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                                   ^
file_polyglot_003203.c:2:79: note: previous definition of 'E' was here
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                               ^
file_polyglot_003203.c:2:103: error: redeclaration of enumerator 'F'
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                                       ^
file_polyglot_003203.c:2:83: note: previous definition of 'F' was here
    2 |  A , b = sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? 27 ( ) : 1 , C , D , E , F , D , C , D , E , F , G , pl }
      |                                                                                   ^
file_polyglot_003203.c:5:58: warning: implicit declaration of function 'x' [-Wimplicit-function-declaration]
    5 |  int x [ sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? x ( ) ^= x ( ) : 1 ] ;
      |                                                          ^
file_polyglot_003203.c:5:64: error: lvalue required as left operand of assignment
    5 |  int x [ sizeof ( int ) >= 1 && sizeof ( void * ) >= 1 ? x ( ) ^= x ( ) : 1 ] ;
      |                                                                ^~
file_polyglot_003203.c:7:9: error: invalid initializer
    7 |  test = 0 ;
      |         ^
file_polyglot_003203.c: In function 'main':
file_polyglot_003203.c:10:11: error: switch quantity not an integer
   10 |  switch ( test ) {
      |           ^~~~
file_polyglot_003203.c: In function 'y':
file_polyglot_003203.c:19:2: error: called object 'x' is not a function or function pointer
   19 |  x ( ) , y , x ( ) = x ( ) , test = test , x += x , x = x ;
      |  ^
file_polyglot_003203.c:18:22: note: declared here
   18 |  static void y ( int x ) {
      |                  ~~~~^
file_polyglot_003203.c:19:14: error: called object 'x' is not a function or function pointer
   19 |  x ( ) , y , x ( ) = x ( ) , test = test , x += x , x = x ;
      |              ^
file_polyglot_003203.c:18:22: note: declared here
   18 |  static void y ( int x ) {
      |                  ~~~~^
file_polyglot_003203.c:19:22: error: called object 'x' is not a function or function pointer
   19 |  x ( ) , y , x ( ) = x ( ) , test = test , x += x , x = x ;
      |                      ^
file_polyglot_003203.c:18:22: note: declared here
   18 |  static void y ( int x ) {
      |                  ~~~~^
file_polyglot_003203.c:19:35: error: assignment of read-only variable 'test'
   19 |  x ( ) , y , x ( ) = x ( ) , test = test , x += x , x = x ;
      | 
